[package]

name = "marksman_escape"
version = "0.1.1"
authors = ["Simonas Kazlauskas <git@kazlauskas.me>"]
description = "HTML escape and HTML unescape strings"
keywords = ["encode", "decode", "sanitise", "sanitize"]
license = "ISC"

repository = "https://github.com/nagisa/marksman_escape/"
documentation = "https://nagisa.github.io/marksman_escape/"
